Added project benefits section

--- a/app/views/current/views/applicant-details.html
+++ b/app/views/current/views/applicant-details.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your project
+  Applicant contact details
 {% endblock %}
 
 {% block beforeContent %}
@@ -15,8 +15,8 @@
 
       <form class="form" action="check-answers-contact-details" method="post">
 
-        <h1 class="govuk-heading-xl">
-          Applicant details
+        <h1 class="govuk-heading-l">
+          Applicant contact details
         </h1>
 
         <div class="govuk-form-group">
