--- a/app/views/current/views/check-answers-theme-eligibility.html
+++ b/app/views/current/views/check-answers-theme-eligibility.html
@@ -156,7 +156,7 @@
     </div>
     {% endif %}
 
-    <form action="" method="post" novalidate>
+    <form action="business" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
