--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -5,7 +5,7 @@
 {% block service %}
 
 <span class="govuk-caption-xl">Prototypes</span>
-<h1 class="govuk-heading-xl">
+<h1 class="govuk-heading-l">
   Grants prototypes
 </h1>
 <p>
@@ -70,7 +70,7 @@
       <td class="govuk-table__cell">Expression of Interest contact details</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="">
+      <td class="govuk-table__cell"><a href="irrigation">
           Project benefits
         </a></td>
       <td class="govuk-table__cell">Expression of Interest project benefits</td>
