--- a/app/views/current/views/your-details.html
+++ b/app/views/current/views/your-details.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your project
+  Your contact details
 {% endblock %}
 
 {% block beforeContent %}
@@ -15,8 +15,8 @@
 
       <form class="form" action="/your-details-answer" method="post">
 
-        <h1 class="govuk-heading-xl">
-          Your details
+        <h1 class="govuk-heading-l">
+          Your contact details
         </h1>
 
         <div class="govuk-form-group">
