--- a/app/views/current/views/remaining-costs.html
+++ b/app/views/current/views/remaining-costs.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Meeting the remaining project costs
       </h1>
 
