--- a/app/views/current/views/tenancy-length-condition.html
+++ b/app/views/current/views/tenancy-length-condition.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         You may be eligible for a large countryside productivity grant
       </h1>
 
