Formatting and other fixes
Finished section 4, improved question formatting and other fixes

--- a/app/views/current/views/abstraction-variation-condition.html
+++ b/app/views/current/views/abstraction-variation-condition.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You're not eligible for a large countryside productivity grant
+  You may be eligible for a large countryside productivity grant
 {% endblock %}
 
 {% block beforeContent %}
