--- a/app/views/current/views/country-fail.html
+++ b/app/views/current/views/country-fail.html
@@ -19,7 +19,7 @@
 
       <p>The large countryside productivity grant scheme is only open to businesses located in England.</p>
 
-      <p>Farming businesses in other UK countries may be eligible for a similar grant through their equivalent domestic schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
+      <p>Farming businesses in other UK countries may be eligible for a similar grant through their equivalent domestic schemes. See the <a href="">large countryside productivity grant guidance</a> for further information.</p>
 
     </div>
   </div>
