--- a/app/views/current/views/current-irrigation.html
+++ b/app/views/current/views/current-irrigation.html
@@ -5,7 +5,7 @@ Your current irrigation
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="check-answers-theme-eligibility">Back</a>
+<a class="govuk-back-link" href="irrigation">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@ Your current irrigation
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="/business-answer" method="post">
+    <form class="form" action="proposed-irrigation" method="post">
 
       <h1 class="govuk-heading-l">
         Your current irrigation
