--- a/app/views/current/views/legal-status-fail.html
+++ b/app/views/current/views/legal-status-fail.html
@@ -30,7 +30,7 @@
           <li>Public Organisation</li>
         </ul>
 
-      <p>Other types of business may be supported in future schemes. See <a href="">The large countryside productivity grant guidance</a> for further information.</p>
+      <p>Other types of business may be supported in future schemes. See the <a href="">large countryside productivity grant guidance</a> for further information.</p>
 
     </div>
   </div>
