--- a/app/views/current/views/legal-status.html
+++ b/app/views/current/views/legal-status.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  What type of farming do you do?
+  What is the legal status of your {{ data['farming-type'] }} business?
 {% endblock %}
 
 {% block beforeContent %}
