--- a/app/views/current/views/planning-permission.html
+++ b/app/views/current/views/planning-permission.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Do you need planning permission for the project?
+  Have you already obtained planning permission, or will have obtained it six months from now?
 {% endblock %}
 
 {% block beforeContent %}
