--- a/app/views/current/views/project-items.html
+++ b/app/views/current/views/project-items.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Which items are included in your project?
+  Which items eligible for grant funding are you including in your project?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,11 +19,11 @@
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which items are included in your project?
+                Which items eligible for grant funding are you including in your project?
               </h1>
             </legend>
             <span id="project-items-hint" class="govuk-hint">
-              Select all that apply.
+              Select all that apply
             </span>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
