--- a/app/views/current/views/tenancy-length.html
+++ b/app/views/current/views/tenancy-length.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Are your land or premises rented, leased or tenanted?
+  Does your tenancy extend beyond six years?
 {% endblock %}
 
 {% block beforeContent %}
