--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -5,7 +5,7 @@ Check your answers
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="project-start">Back</a>
+<a class="govuk-back-link" onclick="history.back()" href="#">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -49,7 +49,7 @@ Check your answers
           Turnover
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['turnover'] }}
+          £{{ data['turnover'] | toFixed(2) | commafy }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="business">
