--- a/app/views/current/views/collaboration.html
+++ b/app/views/current/views/collaboration.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your current irrigation
+  Will you supply any other farms with water? If so, how many?
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="check-answers-theme-eligibility">Back</a>
+  <a class="govuk-back-link" onclick="history.back()" href="#">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/business-answer" method="post">
+      <form class="form" action="productivity" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="collaboration">
