--- a/app/views/current/views/environment.html
+++ b/app/views/current/views/environment.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  How would the project improve the environment?
+  How would your project improve the environment?
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="check-answers-theme-eligibility">Back</a>
+  <a class="govuk-back-link" href="productivity">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,11 +13,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/business-answer" method="post">
+      <form class="form" action="check-answers-project-benefits" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="environment">
-              How would the project improve the environment?
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="environment">
+              How would your project improve the environment?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="environment" name="environment" rows="8" aria-describedby="environment-hint">{{ data['environment'] }}</textarea>
