--- a/app/views/current/views/productivity.html
+++ b/app/views/current/views/productivity.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="check-answers-theme-eligibility">Back</a>
+  <a class="govuk-back-link" href="collaboration">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,11 +13,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/business-answer" method="post">
+      <form class="form" action="environment" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="productivity">
-              How would the project improve productivity?
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="productivity">
+              How would your project improve productivity?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="productivity" name="productivity" rows="8" aria-describedby="productivity-hint">{{ data['productivity'] }}</textarea>
