--- a/app/views/current/views/project-cost.html
+++ b/app/views/current/views/project-cost.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+  What are your estimate total project costs?
 {% endblock %}
 
 {% block beforeContent %}
@@ -21,7 +21,7 @@
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
-             Your costs should be net of VAT (Unless VAT is non-recoverable)
+             Your costs should be net of VAT (unless VAT is non-recoverable)
           </div>
           <span class="govuk-body govuk-!-margin-right-2">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
         </div>
