--- a/app/views/current/views/proposed-irrigation.html
+++ b/app/views/current/views/proposed-irrigation.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your current irrigation
+  Changes to your current irrigation that will result from your project
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="check-answers-theme-eligibility">Back</a>
+  <a class="govuk-back-link" href="current-irrigation">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,43 +13,41 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/business-answer" method="post">
+      <form class="form" action="collaboration" method="post">
 
         <h1 class="govuk-heading-l">
-          Changes to your irrigation resulting from the project
+          Changes to your current irrigation that will result from your project
         </h1>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="improved-land-irrigated">
-              Will you irrigate more land if the project goes ahead?
+              How would the land you irrigate change if the project goes ahead?
             </label>
           <textarea class="govuk-textarea" id="improved-land-irrigated" name="improved-land-irrigated" rows="2" aria-describedby="improved-land-irrigated-hint">{{ data['improved-land-irrigated'] }}</textarea>
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="improved-crops-irrigated">
-              Will you change what crops you irrigate if the project goes ahead?
+              How would the crops you irrigate change if the project goes ahead?
             </label>
           <textarea class="govuk-textarea" id="improved-crops-irrigated" name="improved-crops-irrigated" rows="2" aria-describedby="improved-crops-irrigated-hint">{{ data['improved-crops-irrigated'] }}</textarea>
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="improved-water-source">
-              Where will the water to irrigate come from if the project goes ahead?
+              Where would the water used to irrigate come from if the project goes ahead?
             </label>
           <textarea class="govuk-textarea" id="improved-water-source" name="improved-water-source" rows="4" aria-describedby="improved-water-source-hint">{{ data['improved-water-source'] }}</textarea>
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="improved-irrigation-systems">
-              Will you change the systems you use to irrigate if the project goes ahead?
+              How would the systems you use to irrigate change if the project goes ahead?
             </label>
           <textarea class="govuk-textarea" id="improved-irrigation-systems" name="improved-irrigation-systems" rows="4" aria-describedby="improved-irrigation-systems-hint">{{ data['improved-irrigation-systems'] }}</textarea>
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
-
-
 
       </form>
 
