Task list logic first pass
I've changed the CYA pages to point to the task list, and added logic into the task list to point to CYA if a section is completed, otherwise first question in that section.

Status remains as "Completed" if you go back and change anything.

--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -218,7 +218,7 @@ Check your answers
       {% endif %}
     </dl>
 
-    <form action="irrigation" method="post" novalidate>
+    <form action="task-list" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
