--- a/app/views/current/views/check-answers-project-eligibility.html
+++ b/app/views/current/views/check-answers-project-eligibility.html
@@ -150,7 +150,7 @@
     </div>
     {% endif %}
 
-    <form action="project-items" method="post" novalidate>
+    <form action="task-list" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
